[workspace]
resolver = "2"
members = [
    "crates/ayas-core",
    "crates/ayas-chain",
    "crates/ayas-graph",
    "crates/ayas-agent",
    "crates/ayas-deep-research",
    "crates/ayas-adl",
    "crates/ayas-examples",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/taiki3/ayas"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
schemars = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-stream = "0.1"
serde_yaml = "0.9"
rhai = { version = "1", features = ["serde"] }

# Internal crates
ayas-core = { path = "crates/ayas-core" }
ayas-chain = { path = "crates/ayas-chain" }
ayas-graph = { path = "crates/ayas-graph" }
ayas-agent = { path = "crates/ayas-agent" }
ayas-deep-research = { path = "crates/ayas-deep-research" }
ayas-adl = { path = "crates/ayas-adl" }
