[workspace]
resolver = "2"
members = [
    "crates/ayas-core",
    "crates/ayas-chain",
    "crates/ayas-graph",
    "crates/ayas-checkpoint",
    "crates/ayas-agent",
    "crates/ayas-deep-research",
    "crates/ayas-adl",
    "crates/ayas-smith",
    "crates/ayas-llm",
    "crates/ayas-examples",
    "crates/ayas-server",
    "crates/ayas-rag",
    "crates/ayas-eval",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/taiki3/ayas"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
schemars = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-stream = "0.1"
serde_yaml = "0.9"
rhai = { version = "1", features = ["serde"] }

axum = { version = "0.8", features = ["json", "macros"] }
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5" }
async-stream = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
meval = "0.2"

arrow = { version = "54", default-features = false }
parquet = { version = "54", default-features = false, features = ["arrow", "zstd"] }
duckdb = { version = "1.1", features = ["bundled", "parquet"] }
dirs = "5"
flume = "0.11"
tempfile = "3"
rusqlite = { version = "0.34", features = ["bundled"] }
proptest = "1"
regex = "1"

# Internal crates
ayas-core = { path = "crates/ayas-core" }
ayas-chain = { path = "crates/ayas-chain" }
ayas-graph = { path = "crates/ayas-graph" }
ayas-checkpoint = { path = "crates/ayas-checkpoint" }
ayas-agent = { path = "crates/ayas-agent" }
ayas-deep-research = { path = "crates/ayas-deep-research" }
ayas-adl = { path = "crates/ayas-adl" }
ayas-smith = { path = "crates/ayas-smith" }
ayas-llm = { path = "crates/ayas-llm" }
ayas-server = { path = "crates/ayas-server" }
ayas-rag = { path = "crates/ayas-rag" }
ayas-eval = { path = "crates/ayas-eval" }
