[package]
name = "ayas-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pre-built agent patterns for the Ayas framework"

[dependencies]
ayas-core = { workspace = true }
ayas-graph = { workspace = true }
ayas-checkpoint = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
