[package]
name = "ayas-chain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Chain composition primitives for the Ayas LangChain ecosystem"

[dependencies]
ayas-core.workspace = true
async-trait.workspace = true
futures.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
