[package]
name = "ayas-checkpoint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Checkpoint and persistence layer for the Ayas graph execution engine"

[features]
default = []
postgres = ["tokio-postgres"]

[dependencies]
ayas-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
tokio-postgres = { version = "0.7", optional = true, features = ["with-serde_json-1", "with-chrono-0_4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
proptest = { workspace = true }
uuid = { workspace = true }
