[package]
name = "ayas-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Evaluation framework for the Ayas agent platform"

[dependencies]
ayas-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
proptest = { workspace = true }
