[package]
name = "ayas-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[example]]
name = "gemini_chat"
path = "examples/gemini_chat.rs"

[[example]]
name = "claude_chat"
path = "examples/claude_chat.rs"

[[example]]
name = "openai_chat"
path = "examples/openai_chat.rs"

[dependencies]
ayas-core = { workspace = true }
ayas-chain = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
