[package]
name = "ayas-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Graph execution engine for the Ayas framework"

[dependencies]
ayas-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
