[package]
name = "ayas-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM provider implementations for the Ayas framework"

[dependencies]
ayas-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ayas-agent = { workspace = true }
ayas-chain = { workspace = true }
