[package]
name = "ayas-rag"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "RAG (Retrieval-Augmented Generation) support for the Ayas framework"

[dependencies]
ayas-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
proptest = { workspace = true }
