[package]
name = "ayas-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Web server for the Ayas Playground"

[dependencies]
ayas-core = { workspace = true }
ayas-llm = { workspace = true }
ayas-graph = { workspace = true }
ayas-checkpoint = { workspace = true }
ayas-deep-research = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
meval = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
ayas-smith = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
tempfile = { workspace = true }
