[package]
name = "ayas-smith"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LangSmith-style tracing and observability for Ayas"

[dependencies]
ayas-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
arrow = { workspace = true, features = ["chrono-tz"] }
parquet = { workspace = true, features = ["arrow", "zstd"] }
duckdb = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
